--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 310
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "194362ec-ac2c-4467-db43-a42857f17af4"
+        "outputId": "f308ef2f-045b-41db-d9fb-62f757826a0a"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-604f4f2f-e5ff-4233-b508-8cf507d0efa7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0c9a55cd-8f7c-47f0-9f3c-c53024ee5fc6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-604f4f2f-e5ff-4233-b508-8cf507d0efa7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0c9a55cd-8f7c-47f0-9f3c-c53024ee5fc6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-604f4f2f-e5ff-4233-b508-8cf507d0efa7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0c9a55cd-8f7c-47f0-9f3c-c53024ee5fc6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-604f4f2f-e5ff-4233-b508-8cf507d0efa7');\n",
+              "        const element = document.querySelector('#df-0c9a55cd-8f7c-47f0-9f3c-c53024ee5fc6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3220311a-f597-4d29-ac46-2f7088f85c2c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3220311a-f597-4d29-ac46-2f7088f85c2c')\"\n",
+              "<div id=\"df-44614b39-fece-4900-8519-b405a5f24329\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-44614b39-fece-4900-8519-b405a5f24329')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3220311a-f597-4d29-ac46-2f7088f85c2c button');\n",
+              "        document.querySelector('#df-44614b39-fece-4900-8519-b405a5f24329 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -425,6 +425,253 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Conociendo el conjunto de datos"
+      ],
+      "metadata": {
+        "id": "lJadzK43-3iH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Verificando la información con respecto a columnas y filas de nuestros data frame\n",
+        "print('Tienda 1: ', tienda.shape)\n",
+        "print('Tienda 2: ', tienda2.shape)\n",
+        "print('Tienda 3: ', tienda3.shape)\n",
+        "print('Tienda 4: ', tienda4.shape)"
+      ],
+      "metadata": {
+        "id": "xykobSftV64I",
+        "outputId": "dae6c9f1-8c14-4819-9904-4b15a421165e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tienda 1:  (2359, 12)\n",
+            "Tienda 2:  (2359, 12)\n",
+            "Tienda 3:  (2359, 12)\n",
+            "Tienda 4:  (2358, 12)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Verificando la información de columnas y tipos de datos\n",
+        "print(\"Tienda 1: \")\n",
+        "print(tienda.info())\n",
+        "\n",
+        "print(\"Tienda 2: \")\n",
+        "print(tienda2.info())\n",
+        "\n",
+        "print(\"Tienda 3: \")\n",
+        "print(tienda3.info())\n",
+        "\n",
+        "print(\"Tienda 4: \")\n",
+        "print(tienda4.info())"
+      ],
+      "metadata": {
+        "id": "KDyr8E71V3m-",
+        "collapsed": true,
+        "outputId": "c7d3424b-a515-48c1-ce0d-7791e7afa907",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tienda 1: \n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 2359 entries, 0 to 2358\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column                  Non-Null Count  Dtype  \n",
+            "---  ------                  --------------  -----  \n",
+            " 0   Producto                2359 non-null   object \n",
+            " 1   Categoría del Producto  2359 non-null   object \n",
+            " 2   Precio                  2359 non-null   float64\n",
+            " 3   Costo de envío          2359 non-null   float64\n",
+            " 4   Fecha de Compra         2359 non-null   object \n",
+            " 5   Vendedor                2359 non-null   object \n",
+            " 6   Lugar de Compra         2359 non-null   object \n",
+            " 7   Calificación            2359 non-null   int64  \n",
+            " 8   Método de pago          2359 non-null   object \n",
+            " 9   Cantidad de cuotas      2359 non-null   int64  \n",
+            " 10  lat                     2359 non-null   float64\n",
+            " 11  lon                     2359 non-null   float64\n",
+            "dtypes: float64(4), int64(2), object(6)\n",
+            "memory usage: 221.3+ KB\n",
+            "None\n",
+            "Tienda 2: \n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 2359 entries, 0 to 2358\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column                  Non-Null Count  Dtype  \n",
+            "---  ------                  --------------  -----  \n",
+            " 0   Producto                2359 non-null   object \n",
+            " 1   Categoría del Producto  2359 non-null   object \n",
+            " 2   Precio                  2359 non-null   float64\n",
+            " 3   Costo de envío          2359 non-null   float64\n",
+            " 4   Fecha de Compra         2359 non-null   object \n",
+            " 5   Vendedor                2359 non-null   object \n",
+            " 6   Lugar de Compra         2359 non-null   object \n",
+            " 7   Calificación            2359 non-null   int64  \n",
+            " 8   Método de pago          2359 non-null   object \n",
+            " 9   Cantidad de cuotas      2359 non-null   int64  \n",
+            " 10  lat                     2359 non-null   float64\n",
+            " 11  lon                     2359 non-null   float64\n",
+            "dtypes: float64(4), int64(2), object(6)\n",
+            "memory usage: 221.3+ KB\n",
+            "None\n",
+            "Tienda 3: \n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 2359 entries, 0 to 2358\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column                  Non-Null Count  Dtype  \n",
+            "---  ------                  --------------  -----  \n",
+            " 0   Producto                2359 non-null   object \n",
+            " 1   Categoría del Producto  2359 non-null   object \n",
+            " 2   Precio                  2359 non-null   float64\n",
+            " 3   Costo de envío          2359 non-null   float64\n",
+            " 4   Fecha de Compra         2359 non-null   object \n",
+            " 5   Vendedor                2359 non-null   object \n",
+            " 6   Lugar de Compra         2359 non-null   object \n",
+            " 7   Calificación            2359 non-null   int64  \n",
+            " 8   Método de pago          2359 non-null   object \n",
+            " 9   Cantidad de cuotas      2359 non-null   int64  \n",
+            " 10  lat                     2359 non-null   float64\n",
+            " 11  lon                     2359 non-null   float64\n",
+            "dtypes: float64(4), int64(2), object(6)\n",
+            "memory usage: 221.3+ KB\n",
+            "None\n",
+            "Tienda 4: \n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 2358 entries, 0 to 2357\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column                  Non-Null Count  Dtype  \n",
+            "---  ------                  --------------  -----  \n",
+            " 0   Producto                2358 non-null   object \n",
+            " 1   Categoría del Producto  2358 non-null   object \n",
+            " 2   Precio                  2358 non-null   float64\n",
+            " 3   Costo de envío          2358 non-null   float64\n",
+            " 4   Fecha de Compra         2358 non-null   object \n",
+            " 5   Vendedor                2358 non-null   object \n",
+            " 6   Lugar de Compra         2358 non-null   object \n",
+            " 7   Calificación            2358 non-null   int64  \n",
+            " 8   Método de pago          2358 non-null   object \n",
+            " 9   Cantidad de cuotas      2358 non-null   int64  \n",
+            " 10  lat                     2358 non-null   float64\n",
+            " 11  lon                     2358 non-null   float64\n",
+            "dtypes: float64(4), int64(2), object(6)\n",
+            "memory usage: 221.2+ KB\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Verificando si los data frames almacenan valores nulos\n",
+        "print(\"Tienda 1: \")\n",
+        "print(tienda.isnull().sum())\n",
+        "\n",
+        "print(\"Tienda 2: \")\n",
+        "print(tienda2.isnull().sum())\n",
+        "\n",
+        "print(\"Tienda 3: \")\n",
+        "print(tienda3.isnull().sum())\n",
+        "\n",
+        "print(\"Tienda 4: \")\n",
+        "print(tienda4.isnull().sum())"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "4PLp4jgZ-I0P",
+        "outputId": "75028459-d493-42cb-def7-80508e6caeec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tienda 1: \n",
+            "Producto                  0\n",
+            "Categoría del Producto    0\n",
+            "Precio                    0\n",
+            "Costo de envío            0\n",
+            "Fecha de Compra           0\n",
+            "Vendedor                  0\n",
+            "Lugar de Compra           0\n",
+            "Calificación              0\n",
+            "Método de pago            0\n",
+            "Cantidad de cuotas        0\n",
+            "lat                       0\n",
+            "lon                       0\n",
+            "dtype: int64\n",
+            "Tienda 2: \n",
+            "Producto                  0\n",
+            "Categoría del Producto    0\n",
+            "Precio                    0\n",
+            "Costo de envío            0\n",
+            "Fecha de Compra           0\n",
+            "Vendedor                  0\n",
+            "Lugar de Compra           0\n",
+            "Calificación              0\n",
+            "Método de pago            0\n",
+            "Cantidad de cuotas        0\n",
+            "lat                       0\n",
+            "lon                       0\n",
+            "dtype: int64\n",
+            "Tienda 3: \n",
+            "Producto                  0\n",
+            "Categoría del Producto    0\n",
+            "Precio                    0\n",
+            "Costo de envío            0\n",
+            "Fecha de Compra           0\n",
+            "Vendedor                  0\n",
+            "Lugar de Compra           0\n",
+            "Calificación              0\n",
+            "Método de pago            0\n",
+            "Cantidad de cuotas        0\n",
+            "lat                       0\n",
+            "lon                       0\n",
+            "dtype: int64\n",
+            "Tienda 4: \n",
+            "Producto                  0\n",
+            "Categoría del Producto    0\n",
+            "Precio                    0\n",
+            "Costo de envío            0\n",
+            "Fecha de Compra           0\n",
+            "Vendedor                  0\n",
+            "Lugar de Compra           0\n",
+            "Calificación              0\n",
+            "Método de pago            0\n",
+            "Cantidad de cuotas        0\n",
+            "lat                       0\n",
+            "lon                       0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#1. Análisis de facturación\n",
         "\n"
       ],
@@ -436,16 +683,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xykobSftV64I"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KDyr8E71V3m-"
+        "id": "Ca7IM3vL_DRN"
       },
       "execution_count": null,
       "outputs": []
