Se agregó el ingreso total de cada tienda

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -442,10 +442,10 @@
       ],
       "metadata": {
         "id": "xykobSftV64I",
-        "outputId": "dae6c9f1-8c14-4819-9904-4b15a421165e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dae6c9f1-8c14-4819-9904-4b15a421165e"
       },
       "execution_count": 15,
       "outputs": [
@@ -480,10 +480,10 @@
       "metadata": {
         "id": "KDyr8E71V3m-",
         "collapsed": true,
-        "outputId": "c7d3424b-a515-48c1-ce0d-7791e7afa907",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c7d3424b-a515-48c1-ce0d-7791e7afa907"
       },
       "execution_count": 18,
       "outputs": [
@@ -597,11 +597,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "4PLp4jgZ-I0P",
-        "outputId": "75028459-d493-42cb-def7-80508e6caeec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4PLp4jgZ-I0P",
+        "outputId": "75028459-d493-42cb-def7-80508e6caeec"
       },
       "execution_count": 19,
       "outputs": [
@@ -681,12 +681,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Creando una función para obtener el total de cada tienda\n",
+        "def obtener_ingresos(tienda):\n",
+        "  total_ingresos = tienda['Precio'].sum()\n",
+        "  return total_ingresos\n",
+        "\n",
+        "# Obteniendo el ingreso de cada tienda\n",
+        "ingreso_tienda = obtener_ingresos(tienda)\n",
+        "ingreso_tienda2 = obtener_ingresos(tienda2)\n",
+        "ingreso_tienda3 = obtener_ingresos(tienda3)\n",
+        "ingreso_tienda4 = obtener_ingresos(tienda4)\n",
+        "\n",
+        "# Agrupando los datos de ingresos y las tiendas\n",
+        "ingresos_tiendas = [ingreso_tienda,ingreso_tienda2,ingreso_tienda3, ingreso_tienda4]\n",
+        "nombre_tiendas = ['tienda','tienda 2','tienda 3','tienda 4']\n",
+        "\n",
+        "# Creando el dataframe correspondiente a los ingresos\n",
+        "ingresos_df = pd.DataFrame({\n",
+        "    'tienda' : nombre_tiendas,\n",
+        "    'total ingresos' : ingresos_tiendas\n",
+        "})\n",
+        "\n",
+        "# Seteando el formato de los flotantes para la vista del data frame\n",
+        "pd.set_option('display.float_format', '{:,.2f}'.format)\n",
+        "\n",
+        "print(ingresos_df)"
+      ],
       "metadata": {
-        "id": "Ca7IM3vL_DRN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ca7IM3vL_DRN",
+        "outputId": "64fadb75-659c-4dce-c3fa-fb0cb88e827e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     tienda   total ingresos\n",
+            "0    tienda 1,150,880,400.00\n",
+            "1  tienda 2 1,116,343,500.00\n",
+            "2  tienda 3 1,098,019,600.00\n",
+            "3  tienda 4 1,038,375,700.00\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
