Agregamos la cantidad de ventas por categoria de cada tienda

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -741,12 +741,78 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Calculando la cantidad de productos vendidos por categoria\n",
+        "\n",
+        "# Creamos una función para obtener una lista de tupla con las categorias y la cantidad de productos vendidos\n",
+        "def obtener_ventas_por_categoria(tienda):\n",
+        "  # Obtenemos las categorias unicas\n",
+        "  categorias = list(set(tienda['Categoría del Producto']))\n",
+        "\n",
+        "  lista_de_tuplas = []\n",
+        "\n",
+        "  for categoria in categorias:\n",
+        "     cantidad = (tienda['Categoría del Producto'] == categoria).sum()\n",
+        "     lista_de_tuplas.append((categoria,int(cantidad)))\n",
+        "\n",
+        "  return lista_de_tuplas\n",
+        "\n",
+        "# Creamos una funcion para generar un dataframe con las ventas y el nombre de cada tienda\n",
+        "def crear_dataframe_ventas(ventas_de_tienda,nombre_tienda):\n",
+        "  df = pd.DataFrame(ventas_de_tienda,columns=['Categoria','Cantidad Vendida'])\n",
+        "  df['Tienda'] = nombre_tienda\n",
+        "  return df\n",
+        "\n",
+        "# Obtenemos las ventas de cada tienda\n",
+        "ventas_tienda = obtener_ventas_por_categoria(tienda)\n",
+        "ventas_tienda2 = obtener_ventas_por_categoria(tienda2)\n",
+        "ventas_tienda3 = obtener_ventas_por_categoria(tienda3)\n",
+        "ventas_tienda4 = obtener_ventas_por_categoria(tienda4)\n",
+        "\n",
+        "# Obtenemos el data frame de cada tienda\n",
+        "ventas_tienda_df = crear_dataframe_ventas(ventas_tienda,'Tienda')\n",
+        "ventas_tienda_df2 = crear_dataframe_ventas(ventas_tienda2,'Tienda 2')\n",
+        "ventas_tienda_df3 = crear_dataframe_ventas(ventas_tienda3,'Tienda 3')\n",
+        "ventas_tienda_df4 = crear_dataframe_ventas(ventas_tienda4,'Tienda 4')\n",
+        "\n",
+        "# Concatenamos los data frames de las tiendas uno debajo del otro\n",
+        "df_total = pd.concat([ventas_tienda_df,ventas_tienda_df2,ventas_tienda_df3,ventas_tienda_df4])\n",
+        "\n",
+        "# Transformamos los datos a lo largo para que el indice sea por categoria, las columnas serán los nombres de las tiendas\n",
+        "# y os valores son la cantidad vendida\n",
+        "tabla_resumen = df_total.pivot(index='Categoria',columns='Tienda',values='Cantidad Vendida')\n",
+        "\n",
+        "# Ordenamos las categorias alfabeticamente\n",
+        "tabla_resumen.sort_index(inplace=True)\n",
+        "\n",
+        "print(tabla_resumen)\n"
+      ],
       "metadata": {
-        "id": "A34YupIuYhfF"
+        "id": "A34YupIuYhfF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "af37000d-bf2e-4dd0-9352-344e928aca00"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tienda                   Tienda  Tienda 2  Tienda 3  Tienda 4\n",
+            "Categoria                                                    \n",
+            "Artículos para el hogar     171       181       177       201\n",
+            "Deportes y diversión        284       275       277       277\n",
+            "Electrodomésticos           312       305       278       254\n",
+            "Electrónicos                448       422       451       451\n",
+            "Instrumentos musicales      182       224       177       170\n",
+            "Juguetes                    324       313       315       338\n",
+            "Libros                      173       197       185       187\n",
+            "Muebles                     465       442       499       480\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
