Mostramos las categorias más populares de cada tienda con respecto a las ventas realizadas

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -44,7 +44,7 @@
           "height": 310
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "f308ef2f-045b-41db-d9fb-62f757826a0a"
+        "outputId": "0d4da3d6-f338-44dc-f6ac-b4d71396f6c9"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0c9a55cd-8f7c-47f0-9f3c-c53024ee5fc6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-91f4d7dc-55a2-4864-8543-81e72671bddb\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0c9a55cd-8f7c-47f0-9f3c-c53024ee5fc6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-91f4d7dc-55a2-4864-8543-81e72671bddb')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0c9a55cd-8f7c-47f0-9f3c-c53024ee5fc6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-91f4d7dc-55a2-4864-8543-81e72671bddb button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0c9a55cd-8f7c-47f0-9f3c-c53024ee5fc6');\n",
+              "        const element = document.querySelector('#df-91f4d7dc-55a2-4864-8543-81e72671bddb');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-44614b39-fece-4900-8519-b405a5f24329\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-44614b39-fece-4900-8519-b405a5f24329')\"\n",
+              "<div id=\"df-998b4716-c28d-4821-b30d-0bf951080868\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-998b4716-c28d-4821-b30d-0bf951080868')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-44614b39-fece-4900-8519-b405a5f24329 button');\n",
+              "        document.querySelector('#df-998b4716-c28d-4821-b30d-0bf951080868 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -447,7 +447,7 @@
         },
         "outputId": "dae6c9f1-8c14-4819-9904-4b15a421165e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +485,7 @@
         },
         "outputId": "c7d3424b-a515-48c1-ce0d-7791e7afa907"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +603,7 @@
         "id": "4PLp4jgZ-I0P",
         "outputId": "75028459-d493-42cb-def7-80508e6caeec"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +715,7 @@
         "id": "Ca7IM3vL_DRN",
         "outputId": "64fadb75-659c-4dce-c3fa-fb0cb88e827e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +760,6 @@
         "# Creamos una funcion para generar un dataframe con las ventas y el nombre de cada tienda\n",
         "def crear_dataframe_ventas(ventas_de_tienda,nombre_tienda):\n",
         "  df = pd.DataFrame(ventas_de_tienda,columns=['Categoria','Cantidad Vendida'])\n",
-        "  df['Tienda'] = nombre_tienda\n",
         "  return df\n",
         "\n",
         "# Obtenemos las ventas de cada tienda\n",
@@ -775,41 +774,78 @@
         "ventas_tienda_df3 = crear_dataframe_ventas(ventas_tienda3,'Tienda 3')\n",
         "ventas_tienda_df4 = crear_dataframe_ventas(ventas_tienda4,'Tienda 4')\n",
         "\n",
-        "# Concatenamos los data frames de las tiendas uno debajo del otro\n",
-        "df_total = pd.concat([ventas_tienda_df,ventas_tienda_df2,ventas_tienda_df3,ventas_tienda_df4])\n",
+        "# Ordenando las ventas\n",
+        "ventas_tienda_df.sort_values(by='Cantidad Vendida',ascending=False,inplace=True)\n",
+        "ventas_tienda_df2.sort_values(by='Cantidad Vendida',ascending=False,inplace=True)\n",
+        "ventas_tienda_df3.sort_values(by='Cantidad Vendida',ascending=False,inplace=True)\n",
+        "ventas_tienda_df4.sort_values(by='Cantidad Vendida',ascending=False,inplace=True)\n",
         "\n",
-        "# Transformamos los datos a lo largo para que el indice sea por categoria, las columnas serán los nombres de las tiendas\n",
-        "# y os valores son la cantidad vendida\n",
-        "tabla_resumen = df_total.pivot(index='Categoria',columns='Tienda',values='Cantidad Vendida')\n",
+        "# Mostrando las ventas\n",
+        "print(\"--Tienda--\")\n",
+        "print(ventas_tienda_df)\n",
         "\n",
-        "# Ordenamos las categorias alfabeticamente\n",
-        "tabla_resumen.sort_index(inplace=True)\n",
+        "print(\"--Tienda 2--\")\n",
+        "print(ventas_tienda_df2)\n",
         "\n",
-        "print(tabla_resumen)\n"
+        "print(\"--Tienda 3--\")\n",
+        "print(ventas_tienda_df3)\n",
+        "\n",
+        "print(\"--Tienda 4--\")\n",
+        "print(ventas_tienda_df4)"
       ],
       "metadata": {
         "id": "A34YupIuYhfF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af37000d-bf2e-4dd0-9352-344e928aca00"
+        "outputId": "620bb3c4-8db4-4aba-d051-661f8e067ff5"
       },
-      "execution_count": 80,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tienda                   Tienda  Tienda 2  Tienda 3  Tienda 4\n",
-            "Categoria                                                    \n",
-            "Artículos para el hogar     171       181       177       201\n",
-            "Deportes y diversión        284       275       277       277\n",
-            "Electrodomésticos           312       305       278       254\n",
-            "Electrónicos                448       422       451       451\n",
-            "Instrumentos musicales      182       224       177       170\n",
-            "Juguetes                    324       313       315       338\n",
-            "Libros                      173       197       185       187\n",
-            "Muebles                     465       442       499       480\n"
+            "--Tienda--\n",
+            "                 Categoria  Cantidad Vendida\n",
+            "6                  Muebles               465\n",
+            "3             Electrónicos               448\n",
+            "7                 Juguetes               324\n",
+            "1        Electrodomésticos               312\n",
+            "0     Deportes y diversión               284\n",
+            "5   Instrumentos musicales               182\n",
+            "4                   Libros               173\n",
+            "2  Artículos para el hogar               171\n",
+            "--Tienda 2--\n",
+            "                 Categoria  Cantidad Vendida\n",
+            "6                  Muebles               442\n",
+            "3             Electrónicos               422\n",
+            "7                 Juguetes               313\n",
+            "1        Electrodomésticos               305\n",
+            "0     Deportes y diversión               275\n",
+            "5   Instrumentos musicales               224\n",
+            "4                   Libros               197\n",
+            "2  Artículos para el hogar               181\n",
+            "--Tienda 3--\n",
+            "                 Categoria  Cantidad Vendida\n",
+            "4                  Muebles               499\n",
+            "2             Electrónicos               451\n",
+            "7                 Juguetes               315\n",
+            "0        Electrodomésticos               278\n",
+            "6     Deportes y diversión               277\n",
+            "3                   Libros               185\n",
+            "1  Artículos para el hogar               177\n",
+            "5   Instrumentos musicales               177\n",
+            "--Tienda 4--\n",
+            "                 Categoria  Cantidad Vendida\n",
+            "4                  Muebles               480\n",
+            "2             Electrónicos               451\n",
+            "7                 Juguetes               338\n",
+            "6     Deportes y diversión               277\n",
+            "0        Electrodomésticos               254\n",
+            "1  Artículos para el hogar               201\n",
+            "3                   Libros               187\n",
+            "5   Instrumentos musicales               170\n"
           ]
         }
       ]
