Agregamos la función y la resolución del promedio de calificaciónes por tienda

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -851,15 +851,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yZR6cOjXYSk1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# 3. Calificación promedio de la tienda\n"
@@ -870,21 +861,51 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Creando una función para obtener una tupla con el nombre de la tienda y su promedio\n",
+        "def obtener_calificacion_promedio(tienda,nombreTienda):\n",
+        "  return (nombreTienda,float(tienda['Calificación'].mean()))\n",
+        "\n",
+        "calificación_tienda1 = obtener_calificacion_promedio(tienda,\"Tienda 1\")\n",
+        "calificación_tienda2 = obtener_calificacion_promedio(tienda2,\"Tienda 2\")\n",
+        "calificación_tienda3 = obtener_calificacion_promedio(tienda3,\"Tienda 3\")\n",
+        "calificación_tienda4 = obtener_calificacion_promedio(tienda4,\"Tienda 4\")\n",
+        "\n",
+        "# Creando una lista con las calificaciónes para transformaro a Data Frame\n",
+        "lista_calificaciones = [\n",
+        "    calificación_tienda1,\n",
+        "    calificación_tienda2,\n",
+        "    calificación_tienda3,\n",
+        "    calificación_tienda4\n",
+        "]\n",
+        "\n",
+        "df_calificaciones = pd.DataFrame(lista_calificaciones,columns=[\"Nombre\",\"Calificación\"])\n",
+        "\n",
+        "print(\"---Calificaciones promedio por tienda---\")\n",
+        "print(df_calificaciones)"
+      ],
       "metadata": {
-        "id": "bh3jjjJwY5MU"
+        "id": "bh3jjjJwY5MU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10d70639-1e6a-4260-fb81-d860791f32d5"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "I0KkjPoTY88F"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---Calificaciones promedio por tienda---\n",
+            "     Nombre  Calificación\n",
+            "0  Tienda 1      3.976685\n",
+            "1  Tienda 2      4.037304\n",
+            "2  Tienda 3      4.048326\n",
+            "3  Tienda 4      3.995759\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
